src/test/ui/issues/issue-5153.stderr
error[E0599]: no method named `foo` found for type `&dyn Foo` in the current scope
  --> $DIR/issue-5153.rs:20:23
   |
LL |     (&5isize as &Foo).foo();
   |                       ^^^
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `foo`, perhaps you need to implement it:
           candidate #1: `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
